--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "umi-test --coverage",
+    "commit": "git add . && git-cz"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -30,6 +31,8 @@
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.36",
+    "commitizen": "^4.2.6",
+    "cz-customizable": "^7.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
